# llm-audit-framework

./: .gitignore  LICENSE.md  README.md
docs/: adversarial-testing.md  control-objectives-matrix.md  determinism-testing.md  effectiveness-evaluation.md  evidence-pack.md  framework-overview.md  glossary.md  risk-tiering-rubric.md  truthfulness-groundedness-testing.md
example-suite/: expected-behavior.md
example-suite/cases/: sample-cases.yaml
example-suite/sample-results/: README.md
templates/: audit-report-template.md  defect-log.csv  scoring-rubric.yaml  test-case-catalog.yaml  test-plan-template.md  use-case-register.csv
tools/python/: README.md  pyproject.toml
tools/python/src/llm_audit_runner/: __init__.py  catalog.py  cli.py  io.py  metrics.py  provider.py  run.py
tools/python/src/llm_audit_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/python/tests/: test_catalog.py
